# mini-smart-home

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
deploy/: docker-compose.yml
mqtt/config/: mosquitto.conf  pwfile
src/: entrypoint.sh  main.py
src/bot/: commands.py  dispatcher.py
src/bot/routers/: device_info.py  start.py
src/core/: dispatcher.py  run_bot.py  run_zigbee.py  settings.py  worker.py
src/devices/: device_service.py
src/jobs/: devices.py  queues_service.py
src/routers/: hello_world.py
src/services/: queues_service.py  storage_service.py  zigbee_service.py
src/zigbee/: constants.py  handlers.py  models.py  zigbee_service.py  zigbee_worker.py
src/zigbee/handlers/: device_state.py  devices.py
